<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/pick_place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_navigation_white_48dp"
        tools:ignore="RelativeOverlap" />
    <!--android:layout_margin="8dp"-->

    <com.maciekjanusz.compassproject.ui.CompassView
        android:id="@+id/compass_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/action_widget_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:checked="false"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/font_normal"
        android:text="@string/widget"
        tools:ignore="RelativeOverlap" />

    <RelativeLayout
        android:id="@+id/pitch_roll_view"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/pitch_roll_labels"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/roll_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/pitch_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_toEndOf="@+id/pitch_roll_labels"
            android:layout_toRightOf="@+id/pitch_roll_labels"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            tools:text="0"
            android:id="@+id/roll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="0"
            android:id="@+id/pitch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:theme="@style/NavigationStatusTheme"
        android:visibility="invisible"
        android:id="@+id/navigation_status_layout"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:drawableStart="@drawable/ic_navigation_303f9f_18dp"
            android:drawableLeft="@drawable/ic_navigation_303f9f_18dp"
            android:id="@+id/destination_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:drawableStart="@drawable/ic_arrow_forward_303f9f_18dp"
            android:drawableLeft="@drawable/ic_arrow_forward_303f9f_18dp"
            android:id="@+id/speed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:drawableStart="@drawable/ic_distance_303f9f_18dp"
            android:drawableLeft="@drawable/ic_distance_303f9f_18dp"
            android:id="@+id/distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:drawableStart="@drawable/ic_timer_303f9f_18dp"
            android:drawableLeft="@drawable/ic_timer_303f9f_18dp"
            android:id="@+id/estimated_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>